tests/spec/emit/snapshots/interop_package_const_aliased_import.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import t "go:time"
  
  fn second() -> t.Duration {
    t.Second
  }
---
package main

import t "time"

func second() t.Duration {
	return t.Second
}
