tests/spec/emit/snapshots/interop_package_const_in_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:time"
  import "go:fmt"
  
  fn function() {
    fmt.Println("march", time.March)
  }
---
package main

import (
	"fmt"
	"time"
)

func function() {
	fmt.Println("march", time.March)
}
