tests/spec/emit/snapshots/interop_package_const_nested_package.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:debug/dwarf"
  
  fn tag() -> dwarf.Tag {
    dwarf.TagArrayType
  }
---
package main

import "debug/dwarf"

func tag() dwarf.Tag {
	return dwarf.TagArrayType
}
