tests/spec/emit/snapshots/interop_parallel_error_tuple_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/migrate"
  
  fn main() {
    let (src, db) = migrate.Close()
    match src {
      Some(e) => fmt.Println("source:", e),
      None => {},
    }
    match db {
      Some(e) => fmt.Println("db:", e),
      None => {},
    }
  }
---
package main

import (
	"example.com/migrate"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ret, ret_1 := migrate.Close()
	option := lisette.OptionFromNilable[error](ret, lisette.IsNilInterface(ret))
	option_1 := lisette.OptionFromNilable[error](ret_1, lisette.IsNilInterface(ret_1))
	tup := lisette.MakeTuple2(option, option_1)
	src := tup.First
	db := tup.Second
	if src.Tag == lisette.OptionSome {
		fmt.Println("source:", src.SomeVal)
	}
	if db.Tag == lisette.OptionSome {
		fmt.Println("db:", db.SomeVal)
	}
}
