tests/spec/emit/snapshots/interop_pointer_scalar_param_none.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "input: \nimport \"go:example.com/cfg\"\n\nfn main() {\n  cfg.Configure(None)\n}\n"
---
package main

import "example.com/cfg"

func main() {
	cfg.Configure(nil)
}
