tests/spec/emit/snapshots/interop_pointer_scalar_param_some.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/cfg"
  
  fn main() {
    cfg.Configure(Some("custom"))
  }
---
package main

import "example.com/cfg"

func main() {
	var ptr string = "custom"
	cfg.Configure(&ptr)
}
