tests/spec/emit/snapshots/interop_promoted_nullable_field_shadowed_by_direct_field.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/promoted"
  
  fn group(client: Ref<promoted.Client>) -> promoted.Group {
    client.Group
  }
---
package main

import "example.com/promoted"

func group(client *promoted.Client) promoted.Group {
	return client.Group
}
