tests/spec/emit/snapshots/interop_promoted_nullable_field_wraps_option.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:errors"
  import "go:example.com/promoted"
  
  fn handler(client: Ref<promoted.Client>) -> Result<promoted.Handler, error> {
    client.Handler.ok_or_else(|| errors.New("handler is unavailable"))
  }
  
  fn group(client: Ref<promoted.Client>) -> Result<Ref<promoted.Group>, error> {
    client.Group.ok_or_else(|| errors.New("group is unavailable"))
  }
---
package main

import (
	"errors"
	"example.com/promoted"
	lisette "github.com/ivov/lisette/prelude"
)

func handler(client *promoted.Client) (promoted.Handler, error) {
	raw := client.Handler
	option := lisette.OptionFromNilable[promoted.Handler](raw, raw == nil)
	v := lisette.OptionOkOrElse(option, func() error {
		return errors.New("handler is unavailable")
	})
	if v.Tag == lisette.ResultOk {
		return v.OkVal, nil
	}
	return *new(promoted.Handler), v.ErrVal
}

func group(client *promoted.Client) (*promoted.Group, error) {
	raw := client.Group
	option := lisette.OptionFromNilable[*promoted.Group](raw, raw == nil)
	v := lisette.OptionOkOrElse(option, func() error {
		return errors.New("group is unavailable")
	})
	if v.Tag == lisette.ResultOk {
		return v.OkVal, nil
	}
	return nil, v.ErrVal
}
