tests/spec/emit/snapshots/interop_promoted_nullable_field_write_unwraps_option.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/promoted"
  
  fn clear(client: mut Ref<promoted.Client>) {
    client.Group = None
  }
---
package main

import "example.com/promoted"

func clear_(client *promoted.Client) {
	client.Group = nil
}
